# Conquerors-Tactic

./: .breakpoints  .gitignore  README.md  main.py  mapDraw.py  pyproject.toml  supervision.py  yml.py
storage/DontEdit/: playerformat.yml
